Angular 6 integration + latest ng-cli defaults

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 end_of_line = lf
 
-[{package.json,.angular-cli.json,tslint.json,karma.conf.js,tsconfig*.json}]
+[{package.json,angular.json,tslint.json,karma.conf.js,tsconfig*.json,test.ts,main.ts,polyfills.ts}]
 indent_style = space
 indent_size = 2
 
