--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 sudo: required
+
 language: node_js
+
 node_js:
   - lts/*
   - node
+
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s
+  - export PATH=$HOME/.yarn/bin:$PATH
+
 script:
   - yarn lint
   - yarn test --code-coverage
+
 after_script:
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
