--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,14 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
             }
           }
         },
@@ -76,7 +83,6 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "watch": false,
-            "sourceMap": true,
             "styles": [
               "src/styles.scss"
             ],
@@ -110,6 +116,11 @@
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
             "devServerTarget": "ng2:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "ng2:serve:production"
+            }
           }
         },
         "lint": {
