--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: node_js
 
+os:
+- linux
+- windows
+
 node_js:
   - lts/*
   - node
 
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s
-  - export PATH=$HOME/.yarn/bin:$PATH
+- if [[ $TRAVIS_OS_NAME = 'windows' ]]; curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
+- if [[ $TRAVIS_OS_NAME = 'windows' ]]; export PATH=$HOME/.yarn/bin:$PATH; fi
 
 script:
   - yarn lint
