--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ node_js:
   - node
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; export PATH=$HOME/.yarn/bin:$PATH; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export PATH=$HOME/.yarn/bin:$PATH; fi
 
 script:
   - yarn lint
