--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,23 @@ language: node_js
 os:
   - linux
   - windows
+  - osx
 
 node_js:
   - lts/*
   - node
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export PATH=$HOME/.yarn/bin:$PATH; fi
+  - if [[ $TRAVIS_OS_NAME != "windows" ]]; then curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
+  - if [[ $TRAVIS_OS_NAME != "windows" ]]; then export PATH=$HOME/.yarn/bin:$PATH; fi
 
 script:
   - yarn lint
   - yarn test --code-coverage
 
 after_script:
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - if [[ $TRAVIS_OS_NAME != "windows" ]]; then cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
+
+allow_failures:
+  - os: windows
+  - os: osx
