--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: node_js
 
-os:
-  - linux
-  - windows
-  - osx
+matrix:
+  include:
+    - os: linux
+    - os: windows
+    - os: osx
+  allow_failures:
+    - os: windows
+    - os: osx
 
 node_js:
   - lts/*
@@ -19,7 +23,3 @@ script:
 
 after_script:
   - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
-
-allow_failures:
-  - os: windows
-  - os: osx
