--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,9 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 end_of_line = lf
 
+[*.yml]
+indent_size = 2
+
 [{package.json,angular.json,tslint.json,karma.conf.js,tsconfig*.json,test.ts,main.ts,polyfills.ts}]
 indent_style = space
 indent_size = 2
