--- a/.travis.yml
+++ b/.travis.yml
@@ -15,16 +15,10 @@ matrix:
       node_js: lts/*
       addons:
         firefox: latest
-        homebrew:
-          packages:
-          - chromium
     - os: osx
       node_js: node
       addons:
         firefox: latest
-        homebrew:
-          packages:
-          - chromium
 
   allow_failures:
     - os: windows
@@ -33,6 +27,7 @@ matrix:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
   - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then export PATH=$HOME/.yarn/bin:$PATH; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install chromium ; fi
 
 script:
   - yarn lint
