--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
   - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then export PATH=$HOME/.yarn/bin:$PATH; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install chromium ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew cask install chromium; fi
 
 script:
   - yarn lint
