--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then export PATH=$HOME/.yarn/bin:$PATH; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then HOMEBREW_NO_AUTO_UPDATE=1 brew cask install chromium; fi
   - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install Firefox; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install chromium-stable; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install chromium; fi
 
 script:
   - yarn lint
