--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
   - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then export PATH=$HOME/.yarn/bin:$PATH; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then HOMEBREW_NO_AUTO_UPDATE=1 brew cask install chromium; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install Firefox; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco firefox-dev --pre -y; fi
   - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install chromium --pre -y; fi
 
 script:
