--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,6 @@ matrix:
       node_js: lts/*
     - os: linux
       node_js: node
-    - os: windows
-      node_js: lts/*
-      env: FIREFOX_BIN="C:\Program Files\Mozilla Firefox\Firefox.exe"
-    - os: windows
-      node_js: node
-      env: FIREFOX_BIN="C:\Program Files\Mozilla Firefox\Firefox.exe"
     - os: osx
       node_js: lts/*
       addons:
@@ -23,15 +17,12 @@ matrix:
         firefox: latest
 
   allow_failures:
-    - os: windows
     - os: osx
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then curl -o- -L https://yarnpkg.com/install.sh | bash -s; fi
-  - if [[ "$TRAVIS_OS_NAME" != "windows" ]]; then export PATH=$HOME/.yarn/bin:$PATH; fi
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s
+  - export PATH=$HOME/.yarn/bin:$PATH
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then HOMEBREW_NO_AUTO_UPDATE=1 brew cask install chromium; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install firefox --pre -y; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install chromium --pre -y; fi
 
 script:
   - yarn lint
