--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.4.2",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "core-js": "^2.5.4",
+    "intl-tel-input": "^14.0.6",
     "lodash": "^4.17.10",
     "ng-http-loader": "^5.0.0",
     "rxjs": "~6.3.3",
