--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,9 @@
             "styles": [
               "src/styles.scss",
               "node_modules/intl-tel-input/build/css/intlTelInput.css"
+            ],
+            "scripts": [
+              "node_modules/intl-tel-input/build/js/utils.js"
             ]
           },
           "configurations": {
@@ -86,7 +89,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/intl-tel-input/build/js/utils.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
