--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ dist: xenial
 
 language: node_js
 
+addons:
+  apt:
+    packages:
+      - chromium-brower
+
 matrix:
   fast_finish: true
   include:
