--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0-rc.5",
-    "@angular/common": "^8.0.0-rc.5",
-    "@angular/compiler": "^8.0.0-rc.5",
-    "@angular/core": "^8.0.0-rc.5",
-    "@angular/forms": "^8.0.0-rc.5",
-    "@angular/platform-browser": "^8.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^8.0.0-rc.5",
-    "@angular/router": "^8.0.0-rc.5",
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
     "@fortawesome/fontawesome-free": "^5.4.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
     "@fortawesome/free-regular-svg-icons": "^5.4.2",
@@ -27,16 +27,16 @@
     "intl-tel-input": "^15.0.0",
     "intl-tel-input-ng": "^0",
     "lodash": "^4.17.10",
-    "ng-http-loader": "^5.0.0",
-    "rxjs": "~6.4.0",
+    "ng-http-loader": "^6.0.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0-rc.4",
-    "@angular/cli": "~8.0.0-rc.4",
-    "@angular/compiler-cli": "^8.0.0-rc.5",
-    "@angular/language-service": "^8.0.0-rc.5",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
