--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.12",
-    "@angular/common": "^9.0.0-rc.12",
-    "@angular/compiler": "^9.0.0-rc.12",
-    "@angular/core": "^9.0.0-rc.12",
-    "@angular/forms": "^9.0.0-rc.12",
-    "@angular/platform-browser": "^9.0.0-rc.12",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.12",
-    "@angular/router": "^9.0.0-rc.12",
+    "@angular/animations": "^9.0.0",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
     "@fortawesome/fontawesome-free": "^5.4.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
     "@fortawesome/free-regular-svg-icons": "^5.4.2",
@@ -33,10 +33,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.12",
-    "@angular/cli": "^9.0.0-rc.12",
-    "@angular/compiler-cli": "^9.0.0-rc.12",
-    "@angular/language-service": "^9.0.0-rc.12",
+    "@angular-devkit/build-angular": "~0.900.0",
+    "@angular/cli": "^9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -53,6 +53,6 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.4"
+    "typescript": "~3.7.5"
   }
 }
