--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.4.2",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "intl-tel-input": "^16.0.0",
-    "intl-tel-input-ng": "0.0.8-beta.2",
+    "intl-tel-input-ng": "^0.1.0",
     "lodash": "^4.17.10",
-    "ng-http-loader": "^6.0.0",
+    "ng-http-loader": "^7.0.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
