--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,6 @@ dist: xenial
 
 language: node_js
 
-addons:
-  apt:
-    packages:
-      - chromium-browser
-
 matrix:
   fast_finish: true
   include:
@@ -35,6 +30,7 @@ script:
   - yarn lint
   - yarn audit
   - yarn test --code-coverage
+  - yarn e2e
 
 after_script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
