--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ script:
   - yarn test --code-coverage
 
 after_script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cat ./coverage/ng2/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
