--- a/.travis.yml
+++ b/.travis.yml
@@ -2,35 +2,20 @@ dist: xenial
 
 language: node_js
 
-matrix:
-  fast_finish: true
-  include:
-    - os: linux
-      node_js: lts/*
-    - os: linux
-      node_js: node
-    - os: osx
-      node_js: lts/*
-      addons:
-        firefox: latest
-    - os: osx
-      node_js: node
-      addons:
-        firefox: latest
-
-  allow_failures:
-    - os: osx
+node_js:
+  - lts/*
+  - node
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s
   - export PATH=$HOME/.yarn/bin:$PATH
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then HOMEBREW_NO_AUTO_UPDATE=1 brew cask install chromium; fi
 
 script:
   - yarn lint
   - yarn audit
+  - yarn build --prod
   - yarn e2e
   - yarn test --code-coverage
 
 after_script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cat ./coverage/ng2/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
+  - cat ./coverage/ng2/lcov.info | ./node_modules/coveralls/bin/coveralls.js
