--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
 }
