--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,6 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": true,
             "preserveSymlinks": true,
             "assets": [
               "src/favicon.ico",
@@ -37,7 +36,13 @@
             ],
             "scripts": [
               "node_modules/intl-tel-input/build/js/utils.js"
-            ]
+            ],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
