chore(deps): Polish angular migration

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
     "pree2e": "webdriver-manager update",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "audit:prod": "yarn audit --groups dependencies"
   },
   "private": true,
   "dependencies": {
@@ -30,7 +32,7 @@
     "lodash": "^4.17.10",
     "ng-http-loader": "^10.0.0",
     "rxjs": "^6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -40,7 +42,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.7.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
@@ -49,7 +51,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "puppeteer": "^8.0.0",
+    "puppeteer": "^9.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.2.4"
