--- a/angular.json
+++ b/angular.json
@@ -98,6 +98,8 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
+            "watch": false,
+
             "styles": [
               "src/styles.scss"
             ],
