--- a/angular.json
+++ b/angular.json
@@ -138,8 +138,9 @@
       }
     }
   },
-  "defaultProject": "ng2",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
