--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: yarn, lint, audit, build, test
+      - name: install, lint, audit, build, test
         run: |
-          yarn
-          yarn lint
-          yarn audit:prod
-          yarn build
-          yarn e2e
-          yarn test --code-coverage
+          npm i
+          npm run lint
+          npm run audit:prod
+          npm run build
+          npm run e2e
+          npm test -- --code-coverage
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
