--- a/angular.json
+++ b/angular.json
@@ -121,19 +121,18 @@
           }
         },
         "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+          "builder": "@cypress/schematic:cypress",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js"
+            "devServerTarget": "ng2:serve",
+            "browser": "chromium",
+            "watch": false,
+            "record": false
           },
           "configurations": {
             "production": {
               "devServerTarget": "ng2:serve:production"
-            },
-            "development": {
-              "devServerTarget": "ng2:serve:development"
             }
-          },
-          "defaultConfiguration": "development"
+          }
         }
       }
     }
