--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        node-version: [ 18.x ]
+        node-version: [ 18.x, 20.x ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
