--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/parser": "^8.23.0",
     "angular-eslint": "^19.0.0",
-    "cypress": "latest",
+    "cypress": "^14.2.0",
     "eslint": "^9.23.0",
     "jasmine-core": "~5.5.0",
     "jasmine-spec-reporter": "~7.0.0",
