--- a/angular.json
+++ b/angular.json
@@ -81,21 +81,17 @@
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
+            "configPath": "./jest.config.ts",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "inlineStyleLanguage": "scss",
             "watch": false,
             "styles": [
               "src/styles.scss"
-            ],
-            "scripts": [
-              "node_modules/intl-tel-input/build/js/utils.js"
             ],
             "assets": [
               "src/favicon.ico",
