chore: put lcov.info in ./coverage

--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,8 @@
             "watch": false,
             "coverageReporters": [
               "lcovonly"
-            ]
+            ],
+            "runnerConfig": "vitest.config.ts"
           }
         },
         "lint": {
